# SNPio

./: .dockerignore  .gitattributes  .gitignore  .gitversion.yml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  all_packages.txt  appmap.yml  build_push_docker.zsh  changelog.md  docker-compose.yml  environment.yml  local_build_test.sh  meta.yaml  multiqc_config.yml  profile_stats_readvcf.txt  pyproject.toml  requirements.txt  run_nremover.py  run_snpio.py  setup.py  snpio_pickle_test.py  test.phy  tmp.txt  tmpepea739b.nremover.vcf.gz.tbi  tmpsc8y0jeq.nremover.vcf.gz.tbi  top_level_packages.txt
.github/workflows/: ci-tests.yml  ci.yml  commit-lint.yml  conda-publish.yml  docker-publish.yml  publish.yml  pypi-docker-publish.yml  pypi-publish.yml  release.yml  test.yml  version-and-release.yml
docs/: GenotypeData_Docstrings.txt  old_pyproject.toml_old.txt  requirements.txt
docs/source/: api_documentation.rst  changelog.rst  conf.py  example_script.rst  getting_started.rst  index.rst  modules.rst  snpio.analysis.rst  snpio.filtering.rst  snpio.plotting.rst  snpio.popgenstats.rst  snpio.read_input.rst  snpio.rst  snpio.utils.rst
etc/: build_push_docker.zsh  create_user_manual.sh  environment.yml  getting_started.md  local_build_test.sh  update_metadata.py
example_data/demography/: custom_models.py  example_demes3.yaml
example_data/phylip_files/: nremover_test.phy  phylogen_nomx.u.snps.phy  test.phy  test_n10.phy  test_n100.phy  test_n2.phy  test_n500.phy
example_data/popmaps/: test.popmap  test.popmap.rearr.txt
example_data/structure_files/: test.nopops.1row.10sites.str  test.pops.1row.10sites.str  test.pops.2row.allsites.str
example_data/trees/: test14K.rate  test14K_header.txt  tmp1.txt
example_data/vcf_files/: appmap.yml  phylogen.vcf.gz.csi  phylogen_subset14K.vcf.gz.tbi  phylogen_subset14K_sorted.vcf.gz.tbi  phylogen_subset3K.vcf.gz.tbi  profile_stats_readvcf.txt  profile_stats_writevcf.txt  test.vcf  test_data.vcf.gz.tbi
plots/: filtered_pca.html  sankey_filtering_report.html  unfiltered_pca.html
recipe/: conda_build_config.yaml  meta.yaml
recipes/snpio/: meta.yaml
release_results_packages/: .gitignore  README.md
release_results_packages/benchmarking_results_package/: README.md  STRUCTURE.md
release_results_packages/validation_results_package/: README.md  STRUCTURE.md
scripts/: amend_commit_hook.sh  combine_tables.py  create_user_manual.sh  flow_diagram.py  pairwise_table_inputs.py  release.zsh  restage.sh  run_fst.py  run_fst.zsh  run_ld.py  run_robust_ld_validation.zsh  run_tests.sh  simulate_genotypes.py  snpio_ld_validation.zsh  subset_loci.zsh  tag_release.sh  update_metadata.py  update_versions.py  validate_ld.py  verify_distributions.py  verify_env.sh
scripts/validation/: generate_ld_golden_fixture.py
scripts_and_notebooks/: .bashrc_snpio  run_snpio.py
snpio/: __init__.py  benchmark_json.py  run_snpio.py  run_snpio_filters.py
snpio/Ranalysis/: .RData  .Rhistory  adegenet_analysis.R  fst_adegenet_Results.xlsx  nei87_genet_dist_hierfstat_Results.xlsx
snpio/analysis/: allele_summary_stats.py  genotype_encoder.py  tree_builder.py  tree_parser.py
snpio/docs/: .version_bump_marker  HEADER.yaml  admonitions-filter.lua  admonitions.tex  listings-setup.tex  metadata.yaml  requirements.txt  template.tex
snpio/docs/dev/: versioning.md
snpio/docs/source/: changelog.md  changelog.rst  conf.py  example_script.rst  getting_started.rst  index.rst  ld_validation.rst  linkage_disequilibrium.rst  pop_gen_statistics.rst  publication.rst  refs.bib  snpio.analysis.rst  snpio.filtering.rst  snpio.io.rst  snpio.plotting.rst  snpio.popgenstats.rst  snpio.read_input.rst  snpio.rst  snpio.utils.rst  tutorial.rst
snpio/example_data/popmaps/: nremover_test.popmap  phylogen_gusep.popmap
snpio/example_data/structure_files/: test.nopops.2row.100sites.str  test.nopops.2row.10sites.str  test.nopops.2row.30sites.str  test.nopops.2row.allsites.str  test.pops.2row.10sites.str
snpio/example_data/trees/: test_n50.rate
snpio/example_data/vcf_files/: nremover_test.vcf.gz.tbi
snpio/filtering/: __init__.py  filtering_helper.py  filtering_methods.py  nremover.py  nremover2.py
snpio/io/: genepop_reader.py  phylip_reader.py  structure_reader.py  vcf_reader.py
snpio/plotting/: __init__.py  linkage_disequilibrium.py  plotting.py
snpio/popgenstats/: amova.py  d_statistics.py  dfoil.py  dstat.py  dstats_base.py  fst_distance.py  fst_outlier_results.py  fst_outliers.py  fst_outliers_dbscan.py  fst_outliers_perm.py  genetic_distance.py  ld_polynomials.py  linkage_disequilibrium.py  numba_helpers.py  partd.py  pop_gen_statistics.py  stats.py  summary_statistics.py
snpio/read_input/: __init__.py  genotype_data.py  genotype_data_base.py  popmap_file.py  simgenodata.py
snpio/simulators/: simulate.py  simulate_data.py
snpio/utils/: benchmarking.py  containers.py  custom_exceptions.py  logging.py  misc.py  missing_stats.py  multiqc_reporter.py  numeric.py  output_paths.py  plot_queue.py  plotting.py  results_exporter.py  scorers.py  sequence_tools.py
snpio/validation/: __init__.py  ld_plots.py  ld_simulation.py  linkage_disequilibrium.py
snpio/validation/data/: moments_popgen_1_6_0_golden.json
snpio_output/gtdata/logs/: monomorphic_sites.txt  non_biallelic_sites.txt
snpio_output/gtdata/plots/: filtered_pca.html  (+1 more)
tests/: benchmarking.py  filter_packages.py  get_docstrings.py  get_pkg_resources.py  modulefinder.py  test.py  test_allele_summary_stats.py  test_dfoil.py  test_dstats.py  test_fst_outliers.py  test_genepop_reader.py  test_genotype_encoder.py  test_ld_validation.py  test_linkage_disequilibrium.py  test_multiqc_config.py  test_multiqc_reporter.py  test_nremover2.py  test_output_paths.py  test_phylip_reader.py  test_plotting.py  test_pop_gen_statistics.py  test_run_snpio.py  test_simulate.py  test_structure_reader.py  test_tree_parser.py  test_vcf_calculate_ref_alt.py  test_vcf_reader.py  test_verify_distributions.py
validation/: MANIFEST.md  README.md  STRUCTURE.md
(+24 files in other folders)
