[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "snpio*",
]

[tool.pytest.ini_options]
testpaths = [
    "./tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[project]
name = "snpio"
version = "1.5.6"
description = "SNPio is a Python API for population genetic file processing, filtering, and analysis. It is designed to be a user-friendly tool for the manipulation of population genetic data in a variety of formats. SNPio can be used to filter data based on missingness, MAF and MAC, singletons, biallelic, and monomorphic sites. It can also generate summary statistics for population genetic analyses."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Drs. Bradley T. Martin and Tyler K. Chafin", email = "evobio721@gmail.com" },
]
keywords = [
    "genomics",
    "bioinformatics",
    "population genetics",
    "SNP",
    "VCF",
    "PHYLIP",
    "STRUCTURE",
    "missing data",
    "filtering",
    "filter",
    "MAF",
    "minor allele frequency",
    "MAC",
    "minor allele count",
    "biallelic",
    "monomorphic",
    "singleton",
    "population structure",
    "d-statistics",
    "Fst",
    "multiqc",
    "encoding",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]
dependencies = [
    "bokeh",
    "h5py",
    "holoviews",
    "kaleido",
    "kneed",
    "matplotlib",
    "multiqc>=1.29",
    "numba",
    "numpy",
    "pandas",
    "panel",
    "plotly",
    "pysam",
    "requests",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "seaborn",
    "toytree",
    "tqdm",
]

[project.license]
text = "GPL-3.0-or-later"

[project.urls]
"Source Code" = "https://github.com/btmartin721/SNPio"
"Bug Tracker" = "https://github.com/btmartin721/SNPio/issues"
Documentation = "https://snpio.readthedocs.io/en/latest/"
Changelog = "https://snpio.readthedocs.io/en/latest/changelog.html"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
]
dev = [
    "memory-profiler",
    "psutil",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "pytest",
    "pre-commit",
    "pyyaml",
]

[project.scripts]
snpio = "snpio.run_snpio:main"
